--- a/assets/style/base/_typography.sass
+++ b/assets/style/base/_typography.sass
@@ -30,23 +30,24 @@ strong
 // Home intro
 
 .homeIntro__catchline
+  color: $white
   font-weight: 600
   letter-spacing: 2px
 
   span
+    color: $white    
     @include xs
       display: block
-      color: $white
   
   span:nth-child(1)
-    font-size: 40px
+    font-size: 42px
     @include sm
       font-size: 34px
     @include xs
       font-size: 14px
   
   span:nth-child(2)
-    font-size: 62px
+    font-size: 65px
     @include sm
       font-size: 53px
     @include xs
@@ -54,7 +55,7 @@ strong
       width: 220px
 
   span:nth-child(3)
-    font-size: 32px
+    font-size: 35px
     font-weight: 300
     letter-spacing: 8px
     @include sm
@@ -151,4 +152,19 @@ strong
   font-size: 28px
   letter-spacing: 2px
 
+.join *
+  color: $white
 
+.join-form input
+  color: #313131
+
+.join__catch
+  font-size: 22px
+  letter-spacing: 1px
+  line-height: 22px
+
+  span
+    margin-left: 10px
+  
+.join-social__catch
+  font-size: 22px
