--- a/assets/style/components/_buttons.sass
+++ b/assets/style/components/_buttons.sass
@@ -4,3 +4,7 @@
   font-weight: 600
   padding: 14px 36px
   letter-spacing: 3px
+  transition: background-color 300ms ease-in-out
+
+  &:hover
+    background-color: #ef4038
